load media files

--- a/UniFiler10/Strings/en/Resources.resw
+++ b/UniFiler10/Strings/en/Resources.resw
@@ -183,4 +183,7 @@
   <data name="Shrink.Label" xml:space="preserve">
     <value>Shrink</value>
   </data>
+  <data name="StopRecording.Label" xml:space="preserve">
+    <value>Stop</value>
+  </data>
 </root>
