--- a/UniFiler10/Strings/en/Resources.resw
+++ b/UniFiler10/Strings/en/Resources.resw
@@ -237,6 +237,9 @@
   <data name="Settings.Label" xml:space="preserve">
     <value>Settings</value>
   </data>
+  <data name="Settings1.Text" xml:space="preserve">
+    <value>Settings</value>
+  </data>
   <data name="Shrink.Label" xml:space="preserve">
     <value>Shrink</value>
   </data>
