filters + ui + navigation

--- a/UniFiler10/Strings/en/Resources.resw
+++ b/UniFiler10/Strings/en/Resources.resw
@@ -166,7 +166,7 @@
     <value>ConfirmationRequest</value>
   </data>
   <data name="Cover.Label" xml:space="preserve">
-    <value>Cover</value>
+    <value>Overview</value>
   </data>
   <data name="Delete.Text" xml:space="preserve">
     <value>Delete</value>
