--- a/UniFiler10/Strings/en/Resources.resw
+++ b/UniFiler10/Strings/en/Resources.resw
@@ -198,11 +198,17 @@
   <data name="FieldDescrsNotAssignedToCat.Text" xml:space="preserve">
     <value>Available fields</value>
   </data>
+  <data name="Go.Text" xml:space="preserve">
+    <value>Go</value>
+  </data>
   <data name="Name.Text" xml:space="preserve">
     <value>Name</value>
   </data>
   <data name="NameAlreadyInUse.Text" xml:space="preserve">
     <value>Name already in use</value>
+  </data>
+  <data name="NewBinderName.Text" xml:space="preserve">
+    <value>New binder name</value>
   </data>
   <data name="NewCategory.Text" xml:space="preserve">
     <value>New category</value>
