--- a/UniFiler10/Strings/en/Resources.resw
+++ b/UniFiler10/Strings/en/Resources.resw
@@ -216,6 +216,9 @@
   <data name="Import.Text" xml:space="preserve">
     <value>Import</value>
   </data>
+  <data name="ImportFolders.Text" xml:space="preserve">
+    <value>Import folders</value>
+  </data>
   <data name="Name.Text" xml:space="preserve">
     <value>Name</value>
   </data>
