--- a/UniFiler10/Strings/en/Resources.resw
+++ b/UniFiler10/Strings/en/Resources.resw
@@ -168,6 +168,9 @@
   <data name="ByFldFolders.Text" xml:space="preserve">
     <value>Folders with value</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
   <data name="Categories.Text" xml:space="preserve">
     <value>Categories</value>
   </data>
@@ -216,8 +219,17 @@
   <data name="Import.Text" xml:space="preserve">
     <value>Import</value>
   </data>
+  <data name="Import1" xml:space="preserve">
+    <value>Import</value>
+  </data>
+  <data name="ImportBinderConfirmationRequest" xml:space="preserve">
+    <value>There is already a binder with the same name. What do you want to do?</value>
+  </data>
   <data name="ImportFolders.Text" xml:space="preserve">
     <value>Import folders</value>
+  </data>
+  <data name="Merge" xml:space="preserve">
+    <value>Merge</value>
   </data>
   <data name="Name.Text" xml:space="preserve">
     <value>Name</value>
