empty filter notices

--- a/UniFiler10/Strings/en/Resources.resw
+++ b/UniFiler10/Strings/en/Resources.resw
@@ -384,4 +384,7 @@
   <data name="Import1" xml:space="preserve">
     <value>Import</value>
   </data>
+  <data name="SelectAValue.Text" xml:space="preserve">
+    <value>Select a value</value>
+  </data>
 </root>
