better recorder ui in case of errors

--- a/UniFiler10/Strings/en/Resources.resw
+++ b/UniFiler10/Strings/en/Resources.resw
@@ -387,4 +387,7 @@
   <data name="SelectAValue.Text" xml:space="preserve">
     <value>Select a value</value>
   </data>
+  <data name="AudioRecordingCannotStart" xml:space="preserve">
+    <value>Cannot record</value>
+  </data>
 </root>
