less useless intolerance with od

--- a/UniFiler10/Strings/en/Resources.resw
+++ b/UniFiler10/Strings/en/Resources.resw
@@ -435,8 +435,8 @@
   <data name="RuntimeIsConnectionAvailableFalse.Text" xml:space="preserve">
     <value>Connection not available</value>
   </data>
-  <data name="Retry.Label" xml:space="preserve">
-    <value>Retry</value>
+  <data name="Sync.Label" xml:space="preserve">
+    <value>Sync</value>
   </data>
   <data name="MetadataPullLocalFromOneDrive.Text" xml:space="preserve">
     <value>Overwrite local with One Drive data</value>
